--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -378,16 +378,247 @@
     "\n",
     "def save_dcm_as_png(path_to_dcm, png_save_path):\n",
     "    im = Image.fromarray(dcm_to_numpy(path_to_dcm)*128)\n",
-    "    im.save(png_save_path)"
+    "    im.save(png_save_path)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "im_numpy = []\n",
+    "for file in os.listdir('./images/5'):\n",
+    "    im_numpy.append(dcm_to_numpy('./images/5/' + file))\n",
+    "\n",
+    "row1 = np.concatenate((im_numpy[0], im_numpy[1]), axis = 1)\n",
+    "row2 = np.concatenate((im_numpy[2], im_numpy[3]), axis = 1)\n",
+    "test_img_array = np.concatenate((row1, row2), axis = 0)\n",
+    "\n",
+    "\n",
+    "im = Image.fromarray(test_img_array)\n",
+    "im = im.convert('RGB')\n",
+    "im.save('./test.png')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1014\n",
+      "1015\n",
+      "1025\n",
+      "1026\n",
+      "1028\n",
+      "1036\n",
+      "1045\n",
+      "105\n",
+      "106\n",
+      "1060\n",
+      "1061\n",
+      "1066\n",
+      "1067\n",
+      "1069\n",
+      "1074\n",
+      "1083\n",
+      "1095\n",
+      "1096\n",
+      "1097\n",
+      "1100\n",
+      "1109\n",
+      "111\n",
+      "1112\n",
+      "1114\n",
+      "115\n",
+      "122\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "142\n",
+      "152\n",
+      "158\n",
+      "162\n",
+      "177\n",
+      "188\n",
+      "194\n",
+      "204\n",
+      "209\n",
+      "211\n",
+      "233\n",
+      "236\n",
+      "243\n",
+      "247\n",
+      "25\n",
+      "259\n",
+      "260\n",
+      "262\n",
+      "263\n",
+      "272\n",
+      "278\n",
+      "28\n",
+      "281\n",
+      "282\n",
+      "283\n",
+      "289\n",
+      "292\n",
+      "293\n",
+      "294\n",
+      "299\n",
+      "30\n",
+      "308\n",
+      "314\n",
+      "317\n",
+      "318\n",
+      "322\n",
+      "33\n",
+      "334\n",
+      "353\n",
+      "36\n",
+      "362\n",
+      "364\n",
+      "366\n",
+      "370\n",
+      "374\n",
+      "383\n",
+      "387\n",
+      "390\n",
+      "393\n",
+      "397\n",
+      "399\n",
+      "402\n",
+      "411\n",
+      "412\n",
+      "415\n",
+      "421\n",
+      "425\n",
+      "426\n",
+      "434\n",
+      "438\n",
+      "441\n",
+      "442\n",
+      "448\n",
+      "45\n",
+      "452\n",
+      "454\n",
+      "463\n",
+      "464\n",
+      "477\n",
+      "489\n",
+      "49\n",
+      "491\n",
+      "5\n",
+      "500\n",
+      "505\n",
+      "508\n",
+      "522\n",
+      "526\n",
+      "529\n",
+      "532\n",
+      "547\n",
+      "549\n",
+      "551\n",
+      "555\n",
+      "557\n",
+      "561\n",
+      "577\n",
+      "582\n",
+      "596\n",
+      "602\n",
+      "604\n",
+      "608\n",
+      "613\n",
+      "623\n",
+      "625\n",
+      "629\n",
+      "634\n",
+      "646\n",
+      "648\n",
+      "65\n",
+      "655\n",
+      "657\n",
+      "661\n",
+      "665\n",
+      "666\n",
+      "676\n",
+      "696\n",
+      "703\n",
+      "71\n",
+      "713\n",
+      "72\n",
+      "720\n",
+      "729\n",
+      "735\n",
+      "741\n",
+      "749\n",
+      "757\n",
+      "763\n",
+      "767\n",
+      "768\n",
+      "778\n",
+      "79\n",
+      "792\n",
+      "794\n",
+      "804\n",
+      "806\n",
+      "808\n",
+      "816\n",
+      "821\n",
+      "822\n",
+      "825\n",
+      "826\n",
+      "827\n",
+      "828\n",
+      "850\n",
+      "851\n",
+      "857\n",
+      "858\n",
+      "860\n",
+      "862\n",
+      "865\n",
+      "866\n",
+      "87\n",
+      "873\n",
+      "875\n",
+      "879\n",
+      "882\n",
+      "883\n",
+      "886\n",
+      "896\n",
+      "90\n",
+      "901\n",
+      "907\n",
+      "913\n",
+      "917\n",
+      "924\n",
+      "929\n",
+      "934\n",
+      "936\n",
+      "938\n",
+      "939\n",
+      "953\n",
+      "959\n",
+      "962\n",
+      "967\n",
+      "972\n",
+      "986\n",
+      "990\n",
+      "993\n",
+      "997\n"
+     ]
+    }
+   ],
+   "source": [
+    "for patient_id in csv_data_on_hand['patient_id'].unique():\n",
+    "    df = csv_data_on_hand[csv_data_on_hand['patient_id'] == patient_id]\n",
+    " \n",
+    "    \n"
    ]
   },
   {
