added image concat function

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,252 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>site_id</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>image_id</th>\n",
-       "      <th>laterality</th>\n",
-       "      <th>view</th>\n",
-       "      <th>age</th>\n",
-       "      <th>cancer</th>\n",
-       "      <th>biopsy</th>\n",
-       "      <th>invasive</th>\n",
-       "      <th>BIRADS</th>\n",
-       "      <th>implant</th>\n",
-       "      <th>density</th>\n",
-       "      <th>machine_id</th>\n",
-       "      <th>difficult_negative_case</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10006</td>\n",
-       "      <td>462822612</td>\n",
-       "      <td>L</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10006</td>\n",
-       "      <td>1459541791</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10006</td>\n",
-       "      <td>1864590858</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10006</td>\n",
-       "      <td>1874946579</td>\n",
-       "      <td>R</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>220375232</td>\n",
-       "      <td>L</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>270344397</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>541722628</td>\n",
-       "      <td>R</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>1031443799</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10025</td>\n",
-       "      <td>562340703</td>\n",
-       "      <td>L</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10025</td>\n",
-       "      <td>1365269360</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   site_id  patient_id    image_id laterality view   age  cancer  biopsy  \\\n",
-       "0        2       10006   462822612          L   CC  61.0       0       0   \n",
-       "1        2       10006  1459541791          L  MLO  61.0       0       0   \n",
-       "2        2       10006  1864590858          R  MLO  61.0       0       0   \n",
-       "3        2       10006  1874946579          R   CC  61.0       0       0   \n",
-       "4        2       10011   220375232          L   CC  55.0       0       0   \n",
-       "5        2       10011   270344397          L  MLO  55.0       0       0   \n",
-       "6        2       10011   541722628          R   CC  55.0       0       0   \n",
-       "7        2       10011  1031443799          R  MLO  55.0       0       0   \n",
-       "8        2       10025   562340703          L   CC  75.0       0       0   \n",
-       "9        2       10025  1365269360          L  MLO  75.0       0       0   \n",
-       "\n",
-       "   invasive  BIRADS  implant density  machine_id  difficult_negative_case  \n",
-       "0         0     NaN        0     NaN          29                    False  \n",
-       "1         0     NaN        0     NaN          29                    False  \n",
-       "2         0     NaN        0     NaN          29                    False  \n",
-       "3         0     NaN        0     NaN          29                    False  \n",
-       "4         0     0.0        0     NaN          21                     True  \n",
-       "5         0     0.0        0     NaN          21                     True  \n",
-       "6         0     NaN        0     NaN          21                    False  \n",
-       "7         0     NaN        0     NaN          21                    False  \n",
-       "8         0     NaN        0     NaN          29                    False  \n",
-       "9         0     NaN        0     NaN          29                    False  "
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loading the CSV file and cleaning the data\n",
     "train_csv = pd.read_csv(\"./train.csv\")\n",
@@ -274,26 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<-- Difficult negative case --> \n",
-      " False    47001\n",
-      "True      7705\n",
-      "Name: difficult_negative_case, dtype: int64\n",
-      "\n",
-      "<-- Cancer --> \n",
-      " 0    53548\n",
-      "1     1158\n",
-      "Name: cancer, dtype: int64\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Exploring data\n",
     "print(f\"<-- Difficult negative case --> \\n {train_csv['difficult_negative_case'].value_counts()}\\n\")\n",
@@ -305,20 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Getting a csv of the files we have.\n",
     "patient_ids_on_hand = []\n",
@@ -330,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,22 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    874\n",
-       "1     18\n",
-       "Name: cancer, dtype: int64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Looking at distribution of postivie values.\n",
     "csv_data_on_hand[\"cancer\"].value_counts()"
@@ -366,259 +82,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Fucntion to convert dcm images to nparray of type uint16\n",
-    "def dcm_to_numpy(path_to_dcmimage):\n",
-    "    dcm_image = di.dcmread(path_to_dcmimage)\n",
+    "def dcm_to_numpy(patient_id, image_id):\n",
+    "    path_to_images = \"./images/\"\n",
+    "    path_to_images += str(patient_id) + \"/\" + str(image_id) + \".dcm\"\n",
+    "    dcm_image = di.dcmread(path_to_images)\n",
     "    np_array = dcm_image.pixel_array\n",
     "    return np_array\n",
     "\n",
+    "#function to save dcm image as png\n",
     "def save_dcm_as_png(path_to_dcm, png_save_path):\n",
     "    im = Image.fromarray(dcm_to_numpy(path_to_dcm)*128)\n",
     "    im.save(png_save_path)\n",
-    "\n"
+    "\n",
+    "# takes df with info of a single patient and concats the corresponding images into one\n",
+    "def image_concat(patient_df):\n",
+    "    print(patient_id)\n",
+    "    image_array = []\n",
+    "    for image_id in patient_df[patient_df['laterality'] == 'L']['image_id']:\n",
+    "        image_array.append(dcm_to_numpy(patient_id, image_id))\n",
+    "    \n",
+    "    row1 = np.concatenate((image_array[0], image_array[1]), axis = 1) # concat L images\n",
+    "\n",
+    "    for image_id in patient_df[patient_df['laterality'] == 'R']['image_id']:\n",
+    "        image_array.append(dcm_to_numpy(patient_id, image_id))\n",
+    "\n",
+    "    row2 = np.concatenate((image_array[0], image_array[1]), axis = 1) # concat R images\n",
+    "\n",
+    "    final_image = np.concatenate((row1, row2), axis=0) # concat L and R images\n",
+    "\n",
+    "    # im = Image.fromarray(final_image)\n",
+    "    # im = im.convert('RGB')\n",
+    "    # im.save('./concat_images/{}.png'.format(patient_id), compress_level = 1)\n",
+    "\n",
+    "    cv2.imwrite('./concat_images/{}.png'.format(patient_id), final_image)\n",
+    "\n",
+    "    #####\n",
+    "    # processing is very slow for some reason\n",
+    "    #####"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "im_numpy = []\n",
-    "for file in os.listdir('./images/5'):\n",
-    "    im_numpy.append(dcm_to_numpy('./images/5/' + file))\n",
-    "\n",
-    "row1 = np.concatenate((im_numpy[0], im_numpy[1]), axis = 1)\n",
-    "row2 = np.concatenate((im_numpy[2], im_numpy[3]), axis = 1)\n",
-    "test_img_array = np.concatenate((row1, row2), axis = 0)\n",
-    "\n",
-    "\n",
-    "im = Image.fromarray(test_img_array)\n",
-    "im = im.convert('RGB')\n",
-    "im.save('./test.png')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1014\n",
-      "1015\n",
-      "1025\n",
-      "1026\n",
-      "1028\n",
-      "1036\n",
-      "1045\n",
-      "105\n",
-      "106\n",
-      "1060\n",
-      "1061\n",
-      "1066\n",
-      "1067\n",
-      "1069\n",
-      "1074\n",
-      "1083\n",
-      "1095\n",
-      "1096\n",
-      "1097\n",
-      "1100\n",
-      "1109\n",
-      "111\n",
-      "1112\n",
-      "1114\n",
-      "115\n",
-      "122\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "142\n",
-      "152\n",
-      "158\n",
-      "162\n",
-      "177\n",
-      "188\n",
-      "194\n",
-      "204\n",
-      "209\n",
-      "211\n",
-      "233\n",
-      "236\n",
-      "243\n",
-      "247\n",
-      "25\n",
-      "259\n",
-      "260\n",
-      "262\n",
-      "263\n",
-      "272\n",
-      "278\n",
-      "28\n",
-      "281\n",
-      "282\n",
-      "283\n",
-      "289\n",
-      "292\n",
-      "293\n",
-      "294\n",
-      "299\n",
-      "30\n",
-      "308\n",
-      "314\n",
-      "317\n",
-      "318\n",
-      "322\n",
-      "33\n",
-      "334\n",
-      "353\n",
-      "36\n",
-      "362\n",
-      "364\n",
-      "366\n",
-      "370\n",
-      "374\n",
-      "383\n",
-      "387\n",
-      "390\n",
-      "393\n",
-      "397\n",
-      "399\n",
-      "402\n",
-      "411\n",
-      "412\n",
-      "415\n",
-      "421\n",
-      "425\n",
-      "426\n",
-      "434\n",
-      "438\n",
-      "441\n",
-      "442\n",
-      "448\n",
-      "45\n",
-      "452\n",
-      "454\n",
-      "463\n",
-      "464\n",
-      "477\n",
-      "489\n",
-      "49\n",
-      "491\n",
-      "5\n",
-      "500\n",
-      "505\n",
-      "508\n",
-      "522\n",
-      "526\n",
-      "529\n",
-      "532\n",
-      "547\n",
-      "549\n",
-      "551\n",
-      "555\n",
-      "557\n",
-      "561\n",
-      "577\n",
-      "582\n",
-      "596\n",
-      "602\n",
-      "604\n",
-      "608\n",
-      "613\n",
-      "623\n",
-      "625\n",
-      "629\n",
-      "634\n",
-      "646\n",
-      "648\n",
-      "65\n",
-      "655\n",
-      "657\n",
-      "661\n",
-      "665\n",
-      "666\n",
-      "676\n",
-      "696\n",
-      "703\n",
-      "71\n",
-      "713\n",
-      "72\n",
-      "720\n",
-      "729\n",
-      "735\n",
-      "741\n",
-      "749\n",
-      "757\n",
-      "763\n",
-      "767\n",
-      "768\n",
-      "778\n",
-      "79\n",
-      "792\n",
-      "794\n",
-      "804\n",
-      "806\n",
-      "808\n",
-      "816\n",
-      "821\n",
-      "822\n",
-      "825\n",
-      "826\n",
-      "827\n",
-      "828\n",
-      "850\n",
-      "851\n",
-      "857\n",
-      "858\n",
-      "860\n",
-      "862\n",
-      "865\n",
-      "866\n",
-      "87\n",
-      "873\n",
-      "875\n",
-      "879\n",
-      "882\n",
-      "883\n",
-      "886\n",
-      "896\n",
-      "90\n",
-      "901\n",
-      "907\n",
-      "913\n",
-      "917\n",
-      "924\n",
-      "929\n",
-      "934\n",
-      "936\n",
-      "938\n",
-      "939\n",
-      "953\n",
-      "959\n",
-      "962\n",
-      "967\n",
-      "972\n",
-      "986\n",
-      "990\n",
-      "993\n",
-      "997\n"
-     ]
-    }
-   ],
-   "source": [
+    "# iterate over each unique patient id\n",
     "for patient_id in csv_data_on_hand['patient_id'].unique():\n",
-    "    df = csv_data_on_hand[csv_data_on_hand['patient_id'] == patient_id]\n",
-    " \n",
-    "    \n"
+    "    current_patient = csv_data_on_hand[csv_data_on_hand['patient_id'] == patient_id]\n",
+    "    image_concat(current_patient)"
    ]
   },
   {
