Updated project structure

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,26 @@
     "import pydicom as di\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
-    "from PIL import Image\n",
-    "import pydicom as pydcm\n",
-    "import cv2"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Loading the CSV file and cleaning the data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m train_csv \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39m./train.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m train_csv\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Loading the CSV file and cleaning the data\n",
     "train_csv = pd.read_csv(\"./train.csv\")\n",
@@ -31,9 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Exploring data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m<-- Difficult negative case --> \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mtrain_csv[\u001b[39m'\u001b[39m\u001b[39mdifficult_negative_case\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m<-- Cancer --> \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mtrain_csv[\u001b[39m'\u001b[39m\u001b[39mcancer\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[39m# The data is very skewed.\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_csv' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Exploring data\n",
     "print(f\"<-- Difficult negative case --> \\n {train_csv['difficult_negative_case'].value_counts()}\\n\")\n",
@@ -148,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
@@ -162,12 +184,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1c328d63af827792c3d0a977ca2df72f6839634e22ce0e5f57bb2d915fb83720"
+    "hash": "ddab7e85b7b6450ba7498f3be7a3b79e9586a4c79bdf11eb628f366166781a3f"
    }
   }
  },
