--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1821,7 +1821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "breast_cancer",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1835,12 +1835,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "db0f0b18dedf618e017217b5deaf517c940b8c9e3e21fd6a06c50a9574568a43"
+    "hash": "e2cde104f4d18245c788b079dac12b495c585d850f7488bacbf703b0b6afa06c"
    }
   }
  },
